check_errors_v7.txt
    Checking racing-wheel-engine v0.1.0 (H:\Code\Rust\OpenRacing\crates\engine)
    Checking tauri-plugin-fs v2.4.4
   Compiling racing-wheel-ui v0.1.0 (H:\Code\Rust\OpenRacing\crates\ui)
error[E0432]: unresolved imports `windows::Win32::System::WindowsProgramming::AvRevertMmThreadCharacteristics`, `windows::Win32::System::WindowsProgramming::AvSetMmThreadCharacteristicsW`
  --> crates\engine\src\hid\windows.rs:26:5
   |
26 |     AvRevertMmThreadCharacteristics, AvSetMmThreadCharacteristicsW,
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ no `AvSetMmThreadCharacteristicsW` in `Win32::System::WindowsProgramming`
   |     |
   |     no `AvRevertMmThreadCharacteristics` in `Win32::System::WindowsProgramming`

error[E0432]: unresolved import `windows::Win32::UI::Pnp`
  --> crates\engine\src\hid\windows.rs:34:25
   |
34 | use windows::Win32::UI::Pnp::{
   |                         ^^^ could not find `Pnp` in `UI`

error[E0432]: unresolved import `racing_wheel_schemas::units`
  --> crates\engine\src\hid\windows.rs:47:27
   |
47 | use racing_wheel_schemas::units::TorqueNm;
   |                           ^^^^^ could not find `units` in `racing_wheel_schemas`

error[E0425]: cannot find value `MAX_HID_REPORT_SIZE` in module `crate::hid::vendor`
   --> crates\engine\src\hid\windows.rs:117:44
    |
117 |     write_buffer: [u8; crate::hid::vendor::MAX_HID_REPORT_SIZE],
    |                                            ^^^^^^^^^^^^^^^^^^^ not found in `crate::hid::vendor`
    |
help: consider importing this constant
    |
  7 + use crate::hid::macos::device::MAX_HID_REPORT_SIZE;
    |
help: if you import `MAX_HID_REPORT_SIZE`, refer to it directly
    |
117 -     write_buffer: [u8; crate::hid::vendor::MAX_HID_REPORT_SIZE],
117 +     write_buffer: [u8; MAX_HID_REPORT_SIZE],
    |

error[E0425]: cannot find value `MAX_HID_REPORT_SIZE` in module `crate::hid::vendor`
   --> crates\engine\src\hid\windows.rs:132:53
    |
132 |             write_buffer: [0u8; crate::hid::vendor::MAX_HID_REPORT_SIZE],
    |                                                     ^^^^^^^^^^^^^^^^^^^ not found in `crate::hid::vendor`
    |
help: consider importing this constant
    |
  7 + use crate::hid::macos::device::MAX_HID_REPORT_SIZE;
    |
help: if you import `MAX_HID_REPORT_SIZE`, refer to it directly
    |
132 -             write_buffer: [0u8; crate::hid::vendor::MAX_HID_REPORT_SIZE],
132 +             write_buffer: [0u8; MAX_HID_REPORT_SIZE],
    |

error[E0425]: cannot find value `MAX_HID_REPORT_SIZE` in module `crate::hid::vendor`
   --> crates\engine\src\hid\windows.rs:664:49
    |
664 |         let mut buf = [0u8; crate::hid::vendor::MAX_HID_REPORT_SIZE];
    |                                                 ^^^^^^^^^^^^^^^^^^^ not found in `crate::hid::vendor`
    |
help: consider importing this constant
    |
  7 + use crate::hid::macos::device::MAX_HID_REPORT_SIZE;
    |
help: if you import `MAX_HID_REPORT_SIZE`, refer to it directly
    |
664 -         let mut buf = [0u8; crate::hid::vendor::MAX_HID_REPORT_SIZE];
664 +         let mut buf = [0u8; MAX_HID_REPORT_SIZE];
    |

warning: unused import: `DeviceTelemetryReport`
  --> crates\engine\src\hid\windows.rs:44:24
   |
44 |     RTError, RTResult, DeviceTelemetryReport,
   |                        ^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

    Checking tauri-plugin-dialog v2.0.0
warning: unreachable pattern
   --> crates\engine\src\hid\windows.rs:378:9
    |
378 |         _ => unsafe { DefWindowProcW(hwnd, msg, wparam, lparam) },
    |         ^ no value can reach this
    |
note: multiple earlier patterns match some of the same values
   --> crates\engine\src\hid\windows.rs:378:9
    |
370 |         WM_DEVICECHANGE => {
    |         --------------- matches some of the same values
...
374 |         WM_QUIT_DEVICE_MONITOR => {
    |         ---------------------- matches some of the same values
...
378 |         _ => unsafe { DefWindowProcW(hwnd, msg, wparam, lparam) },
    |         ^ collectively making this unreachable
    = note: `#[warn(unreachable_patterns)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `WM_QUIT_DEVICE_MONITOR`
   --> crates\engine\src\hid\windows.rs:374:9
    |
374 |         WM_QUIT_DEVICE_MONITOR => {
    |         ^^^^^^^^^^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_WM_QUIT_DEVICE_MONITOR`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

Some errors have detailed explanations: E0425, E0432.
For more information about an error, try `rustc --explain E0425`.
warning: `racing-wheel-engine` (lib) generated 3 warnings
error: could not compile `racing-wheel-engine` (lib) due to 6 previous errors; 3 warnings emitted
